# EventDetection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
config/: local.yaml
modules/: CMakeLists.txt
modules/outputs/: CMakeLists.txt
modules/outputs/mqtt/: mqtt.cpp  mqtt.h
modules/processors/: CMakeLists.txt
modules/processors/config/: config.cpp  config.h
modules/processors/image_processing/: image_processor.cpp  image_processor.h
modules/sources/: CMakeLists.txt
modules/sources/usb_camera/: usb_camera.cpp  usb_camera.h
